k8s/edassist-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edassist-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: edassist-backend
  template:
    metadata:
      labels:
        component: edassist-backend
    spec:
      containers:
        - name: edassist-backend
          image: vw312/edassist-backend
          ports:
            - containerPort: 8000
