k8s/edassist-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edassist-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: edassist-backend
  ports:
    - port: 8000
      targetPort: 8000
