k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
# UPDATE THE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # UPDATE THIS LINE ABOVE
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - edassist.mightymaharaja.tk
      secretName: edassist-mightymaharaja-tk

  rules:
    - host: edassist.mightymaharaja.tk
      http:
        paths:
          - path: /?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: edassist-cluster-ip-service
              servicePort: 8000
